--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "iconv-lite": "^0.6.3",
-    "puppeteer": "^16.2.0"
+    "node-fetch": "^2.6.7",
+    "puppeteer": "^16.2.0",
+    "request": "^2.88.2"
   }
 }
