feat: 야놀자 공지사항, event 이미지, faq 데이터 크롤링

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\src\\Crawling.js"
+            "program": "${workspaceFolder}\\boardCrawl\\event.js"
         }
     ]
 }
