--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\boardCrawl\\event.js"
+            "program": "${workspaceFolder}\\src\\RegionCrawl\\ReadRegionUrl.js"
         }
     ]
 }
