--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\jsonToInsertData\\convert.js"
+            // "program": "${workspaceFolder}\\jsonToInsertData\\convert.js"
+            "program": "${workspaceFolder}/facility_amenity_mapping/create_insert_Amenity.js"
+
         }
     ]
 }
